--- a/Nanu_Alexandra_Lab11/Nanu_Alexandra_Lab11.csproj
+++ b/Nanu_Alexandra_Lab11/Nanu_Alexandra_Lab11.csproj
@@ -67,6 +67,9 @@
 	  <MauiXaml Update="ListEntryPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="ListPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
